# daiquiri

./: .gitignore  .mergify.yml  .testr.conf  .travis.yml  README.rst  mypy.ini  poe.toml  pyproject.toml  requirements-uv.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  codespell.yml  publish.yml  release.yml
daiquiri/: __init__.py  formatter.py  handlers.py  output.py  target.py  types.py
daiquiri/tests/: test_daiquiri.py  test_formatter.py  test_output.py  test_target.py
doc/source/: conf.py  index.rst
examples/: advanced_extra.py  basic.py  excepthook.py  extra.py  files.py  formatter.py  output.py  stringnames.py
