[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "daiquiri"
version = "0.0.0"
requires-python = ">=3.10"
dynamic = ["version"]
license = {"text" = "Apache 2.0"}
description = "Library to configure Python logging easily"
readme = "README.rst"
authors = [
    {name = "Julien Danjou", email = "julien@danjou.info"}
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
  "python-json-logger >= 3"
]

[project.urls]
homepage = "https://github.com/Mergifyio/daiquiri"

[project.optional-dependencies]
systemd = ["systemd-python>=234"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
pattern = "default-unprefixed"

[tool.poe]
include = ["poe.toml"]

[tool.mypy]
files = "daiquiri"
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
       "systemd",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
]
testpaths = ["daiquiri/tests"]

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=6.2.5"}
poethepoet = ">=0.21,<0.38"
ruff = "^0.14.0"
mypy = "^1.18.2"
