[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "daiquiri"
requires-python = ">=3.10"
dynamic = ["version"]
license = {"text" = "Apache 2.0"}
description = "Library to configure Python logging easily"
readme = "README.rst"
authors = [
    {name = "Julien Danjou", email = "julien@danjou.info"}
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
  "python-json-logger >= 3"
]

[project.urls]
homepage = "https://github.com/Mergifyio/daiquiri"

[project.optional-dependencies]
systemd = ["systemd-python>=234; sys_platform == 'linux'"]

[tool.hatch.version]
source = "vcs"
raw-options.tag_regex = "^(?P<version>\\d+(?:\\.\\d+)*)$"

[tool.poe]
include = ["poe.toml"]

[tool.mypy]
files = "daiquiri"
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
       "systemd",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
]
testpaths = ["daiquiri/tests"]

[tool.uv]
# systemd-python is a C extension that requires libsystemd to build;
# provide its metadata so uv can lock without building it.
[[tool.uv.dependency-metadata]]
name = "systemd-python"
version = "235"
requires-dist = []

[dependency-groups]
dev = [
    "pytest>=6.2.5",
    "poethepoet>=0.21,<0.43",
    "ruff>=0.15.6",
    "mypy>=1.18.2",
]
