[metadata]
name = daiquiri
summary = Library to configure Python logging easily
description-file =
    README.rst
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/daiquiri
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    daiquiri

[extras]
test =
  pytest
  six
  mock
systemd =
  systemd-python>=234

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
