[metadata]
name = daiquiri
license = Apache 2.0
summary = Library to configure Python logging easily
long_description = file:README.rst
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/daiquiri
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    python-json-logger
packages =
    daiquiri

[options.extras_require]
test =
  pytest
systemd =
  systemd-python>=234

[wheel]
universal = 1
