[metadata]
name = daiquiri
license = Apache 2.0
summary = Library to configure Python logging easily
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/Mergifyio/daiquiri
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    python-json-logger
packages =
    daiquiri

[options.package_data]
daiquiri = py.typed

[options.extras_require]
test =
  pytest
systemd =
  systemd-python>=234
